--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "start": "nodejs ./bin/www"
   },
   "engines": {
-  "node": "0.10.38",
-  "npm" : "1.4.28"
+  "node": "0.10.x",
+  "npm" : "1.4.x"
   },
 
   "dependencies": {
@@ -18,6 +18,6 @@
   "serve-favicon": "~2.1.3",
   "debug": "~2.0.0",
   "ejs": "~0.8.5",
-  "express-partials": "^0.3.0"
+  "express-partials": "~0.3.0"
   }
 }
