--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express-partials": "~0.3.0",
-    "sequelize": "~2.1.3",
-    "pg": "~4.3.0",
-    "sqlite3": "~3.0.8"
+    "sequelize": "~2.0.0-rc4",
+    "pg": "^4.1.1",
+   // "sqlite3": "~3.0.8"
   }
 }
