--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodejs ./bin/www"
+    "start": "node ./bin/www"
   },
   "engines": {
     "node": "0.10.38",
@@ -22,7 +22,6 @@
     "ejs": "~0.8.5",
     "express-partials": "~0.3.0",
     "sequelize": "~2.1.3",
-    "pg": "~4.3.0",
-    "sqlite3": "~3.0.8"
+    "pg": "~4.3.0"
   }
 }
