--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node ./bin/www"
   },
   "engines": {
-    "node": "0.10.38",
-    "npm": "1.4.28"
+    "node": "0.10.x",
+    "npm": "1.4.x"
   },
   "devDependencies": {
     "sqlite3": "^3.0.4"
@@ -20,8 +20,9 @@
     "serve-favicon": "~2.1.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
-    "express-partials": "~0.3.0",
-    "sequelize": "~2.1.3",
-    "pg": "~4.3.0"
+    "express-partials": "^0.3.0",
+    "sequelize": "~1.7.10",
+    "pg": "~4.3.0",
+    "pg-hstore": "~2.3.2"
   }
 }
