--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express-partials": "^0.3.0",
-    "sequelize": "~1.7.10",
+    "sequelize": "~2.1.0",
     "pg": "~4.3.0",
-    "pg-hstore": "~2.3.2"
+    "pg-hstore": "~2.3.2",
+    "method-override": "~2.3.3",
+    "express-session": "~1.11.2"
   }
 }
